fix video on mobile

--- a/css/templatemo-festava-live.css
+++ b/css/templatemo-festava-live.css
@@ -339,10 +339,8 @@ strong {
   position: absolute;
   top: 0;
   left: 0;
-  object-fit: cover;
-  width: 100%;
-  height: 100%; 
-   object-fit: cover;
+  max-width: 100%; 
+  height: auto;
 }
 
 
